style.css
@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Poppins&display=swap');

:root {
    --logo-font: "Courgette", sans-serif;
    --main-font: "Poppins", sans-serif;
    --home-main-color: #d9376e;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}

html, body {
    height: 100%;
}

/* Navigation */

.header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin: 0 auto;
    padding: 1em 1em;
}

.logo {
    font-family: var(--logo-font); 
    font-size: 0.6rem;
    color: var(--home-main-color);
}

.nav-links {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    height: 100%;
    gap: 20px;
    width: 50%;
    position: absolute;
    top: 0;
    right: -100%;
    font-family: var(--main-font);
    background-color: white;
    transition: 0.5s ease-in;
    border: 2px solid var(--home-main-color);
}

.nav-links-active {
    right: 0;
    font-size: 0.8rem;
}

.nav-link {
    text-decoration: none;
    color: black;
    font-size: 1rem;
    font-weight: 900;
}

.nav-link:hover {
    border-bottom: 2.5px solid var(--home-main-color);
}

.hamburger {
    display: block;
    z-index: 1;
}

.hamburger:hover {
    cursor: pointer;
}

.hamburger-line {
    display: block;
    width: 20px;
    height: 1.5px;
    margin: 5px auto;
    background-color: black;
}

.social-links {
    position: absolute;
    right: -100%;
}

/* Home Page */

.home {
    height: 100vh;
    background-color: white;
}

.home-content-container {
    width: 80%;
    margin: 0 auto;
    margin-top: 8vh;
}

.home-header {
    font-size: 1.8rem;
    font-family: var(--main-font);
    letter-spacing: 0.6px;
    margin-bottom: 0.5em;
}

.home-header > span {
    font-family: var(--logo-font);
    color: var(--home-main-color)
}

.home-p {
    font-size: 0.8rem;
    font-family: var(--main-font);
    letter-spacing: 1px;
    color: grey;
}

.home-button-container {
    display: flex;
    justify-content: space-around;
    margin: 0 auto;
    margin-top: 12vh;
}

.home-button-one {
    text-decoration: none;
    font-family: var(--main-font);
    font-weight: 700;
    background-color: var(--home-main-color);
    color: white;
    border-radius: 20px;
    width: 120px;
    padding-left: 0.8em;
    padding-top: 0.1em;
}

.home-button-two {
    text-decoration: none;
    font-family: var(--main-font);
    font-weight: 700;
    border: 2px solid var(--home-main-color);
    border-radius: 20px;
    color: var(--home-main-color);
    width: 120px;
    padding-left: 0.8em;
}

.home-button-one:hover, .home-button-two:hover {
    color: black;
}

/* Menu Page */

.menu {
    min-height: 100vh;
    background-color: var(--home-main-color);
    padding: 2em 0;
}

.menu-container {
    display: flex;
    flex-direction: column;
    border: 1px solid blue;
    width: 90%;
    margin: 0 auto;
}

.menu-item {
    display: flex;
    flex-direction: column;
    border: 2px solid green;
}

.menu-item-text {
    font-family: var(--main-font);
}

.menu-img {
    width: 100%;
    height: 150px;
    object-fit: cover;
    border: 2px solid white;
}

/* Media Queries */

@media screen and (min-width: 420px) and (orientation: portrait) {
    /* Home Page */
    .home-content-container {
        margin-top: 12vh;
    }

    .home-button-container {
        margin-top: 24vh;
    }
}

@media screen and (min-width: 768px) {
    /* Home Page */ 
    .header-container {
        justify-content: space-evenly;
        margin: 0 auto;
    }

    .home-content-container {
        max-width: 600px;
        margin-top: 12vh;
        text-align: center;
    }

    .home-button-container {
        max-width: 700px;
        margin-top: 14vh;
    }

    .home-header {
        font-size: 2.4rem;
    }

    .home-p {
        font-size: 1rem;
    }

    .logo {
        font-size: 0.8rem;
    }

    .nav-links {
        position: static;
        justify-content: space-evenly;
        flex-direction: row;
        gap: 20px;
        background:none;
        width: 40%;
        padding-right: 7%;
        border: none;
    }

    .hamburger {
        display: none;
    }

    .social-links {
        position: static;
    }

    .ig-svg {
        height: 18px;
    }

    .fb-svg {
        height: 18px;
    }
} 

@media screen and (min-width: 1024px) {
    /* Home Page */
    .nav-links {
        max-width: 500px;
    }

    .home-header {
        font-size: 3rem;
    }
}

